# lomiri-location-service

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README.md  build-deb.sh  symbols.map
data/: CMakeLists.txt  com.lomiri.location.Service.conf  lomiri-location-service-connectivity.pc.in  lomiri-location-service-trust-stored-wayland.service.in  lomiri-location-service-trust-stored.path.in  lomiri-location-service-trust-stored.service.in  lomiri-location-service.pc.in  lomiri-location-service.service.in  ubuntu-location-service-trust-stored.service.in  ubuntu-location-service.service.in
debian/: changelog  control  copyright  liblomiri-location-service-dev.install  liblomiri-location-service3.install  libubuntu-location-service3.install  lomiri-location-service-bin.dirs  lomiri-location-service-bin.install  lomiri-location-service-bin.links  lomiri-location-service-bin.manpages  lomiri-location-service-doc.doc-base  lomiri-location-service-doc.install  lomiri-location-service-examples.install  lomiri-location-service-qt5-plugin.install  lomiri-location-service-qt6-plugin.install  lomiri-location-service-tests.install  rules  ubports.build_profiles  ubuntu-location-service-bin.install  ubuntu-location-service-tests.install  watch
debian/upstream/: metadata
doc/: CMakeLists.txt  contributing-upstream.md  daemon_and_cli.md  debugging.md  intro.md  manual_testing.md  navius-patches.md  tips_n_tricks.md
examples/service/: CMakeLists.txt  client.cpp  lomiri-location-service.1  program_options.h  service.1.ronn  service.cpp  service.md
examples/standalone/connectivity/: CMakeLists.txt  connectivity.cpp
include/: CMakeLists.txt
include/location_service/com/lomiri/location/: accuracy.h  clock.h  codec.h  configuration.h  criteria.h  default_provider_selection_policy.h  fusion_provider.h  fusion_provider_selection_policy.h  heading.h  init_and_shutdown.h  lls_trace.h  logging.h  newer_or_more_accurate_update_selector.h  newer_update_selector.h  optional.h  position.h  provider.h  provider_enumerator.h  provider_factory.h  provider_selection.h  provider_selection_policy.h  proxy_provider.h  satellite_based_positioning_state.h  space_vehicle.h  update.h  update_selector.h  velocity.h  wifi_and_cell_reporting_state.h
include/location_service/com/lomiri/location/connectivity/: bounded_integer.h  manager.h  radio_cell.h  wireless_network.h
include/location_service/com/lomiri/location/service/: configuration.h  default_permission_manager.h  interface.h  permission_manager.h  skeleton.h  state.h  stub.h  system_configuration.h
include/location_service/com/lomiri/location/units/: units.h
include/location_service/com/lomiri/location/wgs84/: altitude.h  coordinate.h  latitude.h  longitude.h
include/location_service/com/ubuntu/location/: optional.h
include/location_service/com/ubuntu/location/units/: units.h
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  (+114 more)
qt/position/: CMakeLists.txt  core_geo_position_info_source.cpp  core_geo_position_info_source.h  core_geo_position_info_source_factory.cpp  core_geo_position_info_source_factory.h  instance.h  plugin.json
src/location_service/com/lomiri/location/: CMakeLists.txt  boost_ptree_settings.cpp  boost_ptree_settings.h  criteria.cpp  default_permission_manager.cpp  default_provider_selection_policy.cpp  engine.cpp  engine.h  fusion_provider.cpp  fusion_provider_selection_policy.cpp  init_and_shutdown.cpp  non_selecting_provider_selection_policy.cpp  non_selecting_provider_selection_policy.h  position.cpp  provider.cpp  provider_factory.cpp  proxy_provider.cpp  satellite_based_positioning_state.cpp  set_name_for_thread.cpp  set_name_for_thread.h  settings.cpp  settings.h  state_tracking_provider.h  time_based_update_policy.cpp  time_based_update_policy.h  time_since_boot.cpp  time_since_boot.h  update_policy.h  wifi_and_cell_reporting_state.cpp
src/location_service/com/lomiri/location/connectivity/: cached_radio_cell.cpp  cached_radio_cell.h  cached_wireless_network.cpp  cached_wireless_network.h  dummy_connectivity_manager.h  manager.cpp  nm.h  ofono.h  ofono_nm_connectivity_manager.cpp  ofono_nm_connectivity_manager.h  radio_cell.cpp  wireless_network.cpp
src/location_service/com/lomiri/location/providers/: CMakeLists.txt  config.cpp
src/location_service/com/lomiri/location/service/: always_granting_permission_manager.h  config.h.in  daemon.cpp  daemon.h  daemon_cli_main.cpp  daemon_main.cpp  dbus_connection_factory.h  default_configuration.cpp  default_configuration.h  default_permission_manager.cpp  demultiplexing_reporter.cpp  demultiplexing_reporter.h  harvester.cpp  harvester.h  ichnaea_reporter.cpp  ichnaea_reporter.h  implementation.cpp  implementation.h  program_options.h  provider_daemon.cpp  provider_daemon.h  provider_daemon_main.cpp  runtime.cpp  (+9 more)
tests/: CMakeLists.txt  acceptance_tests.cpp  boost_ptree_settings_test.cpp  bug_1447110.cpp  connectivity_manager_test.cpp  controller_test.cpp  criteria_test.cpp  daemon_and_cli_tests.cpp  default_permission_manager_test.cpp  delayed_service_test.cpp  demultiplexing_reporter_test.cpp  dummy_provider_tests.cpp  engine_test.cpp  geoclue_provider_test.cpp  gps_provider_test.cpp  harvester_test.cpp  heading_test.cpp  ichnaea_reporter_test.cpp  mock_connectivity_manager.h  mock_engine.h  mock_event_consumer.h  mock_event_receiver.h  mock_network_manager.h  mock_ofono.h  mock_provider.h  mock_reporter.h  null_provider_selection_policy.h  position_test.cpp  provider_factory_test.cpp  provider_selection_policy_test.cpp  provider_test.cpp  remote_provider_test.cpp  remote_providerd_test.cpp  runtime_test.cpp  session_test.cpp  sntp_client_test.cpp  state_tracking_provider_test.cpp  test_main.cpp  time_based_update_policy_test.cpp  trust_store_permission_manager_test.cpp  (+1 more)
tools/: symbol_diff.in
(+47 files in other folders)
